# moshup-squannit-rf3bp-lab

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/results/: latest_demo_metrics.json
scripts/: run_demo.py
src/rf3bp_lab/: __init__.py
src/rf3bp_lab/dynamics/: __init__.py  advanced_gravity.py  models.py  params.py  variational.py
src/rf3bp_lab/navigation/: __init__.py  covariance.py
src/rf3bp_lab/shooting/: __init__.py  hierarchical.py  multi_shooting.py  orbit_families.py
src/rf3bp_lab/utils/: __init__.py  plotting.py
tests/: test_dynamics.py  test_shooting.py
